--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,9 @@ services:
         # Available PHP_EXTENSIONS
         PHP_EXTENSIONS: amqp apcu ast bcmath bitset blackfire bz2 calendar csv dba decimal ds enchant ev event excimer exif ffi ftp gd geospatial gettext gmagick gmp gnupg http igbinary imap inotify intl ion json_post jsonpath ldap luasandbox lzf mailparse maxminddb mcrypt memcache memcached mongodb msgpack mysqli oauth oci8 odbc opcache openswoole opentelemetry pcntl pcov pdo_dblib pdo_firebird pdo_mysql pdo_oci pdo_odbc pdo_pgsql pgsql php_trie pkcs11 pq protobuf pspell raphf rdkafka redis relay seasclick seaslog shmop smbclient snappy snmp snuffleupagus soap sockets solr spx ssh2 stomp sync sysvmsg sysvsem sysvshm tideways tidy timezonedb uopz uploadprogress uuid uv vld xdebug xdiff xhprof xlswriter xmldiff xmlrpc xsl yac yaml zephir_parser zip zmq zstd 
         TZ: Asia/Shanghai
+      platforms:
+        - "linux/amd64"
+        - "linux/arm64"
     container_name: php
     image: bdbin/php:8.3.2-fpm-alpine3.19
     restart: always
