Delete `Dockerfile` for PHP. Delete `fastcgi_params` file. Remove PHP extensions: `opencensus`, `openswoole`, and `opentelemetry`. These extensions cause issues with WordPress article editing. Optimize PHP build process. Optimize Nginx main configuration file. Optimize Nginx sub-configuration files. Add additional PHP extensions. Upgrade MySQL to version 9.0. Upgrade PHP to version 8.3.10. Upgrade Nginx to version 1.27.1. Upgrade Adminer to the latest version. Apply other optimizations.

--- a/apps/nginx/conf.d/default.conf
+++ b/apps/nginx/conf.d/default.conf
@@ -8,11 +8,11 @@ server {
     index index.php index.html index.htm default.html;
 
     location ~ [^/]\.php(/|$) {
+      try_files $uri =404;
       fastcgi_pass  php:9000;
       fastcgi_index index.php;
       fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
       include fastcgi.conf;
-      include fastcgi_params;
     }
 
     location ~ .*\.(gif|jpg|jpeg|png|bmp|swf|flv|mp4|ico)$ {
@@ -38,15 +38,21 @@ server {
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/nginx/ssl/localhost/cacert.pem; # managed by Certbot
     ssl_certificate_key /etc/nginx/ssl/localhost/privkey.pem; # managed by Certbot
+
     # include /etc/nginx/ssl/localhost/options-ssl-nginx.conf; # managed by Certbot
     # ssl_dhparam /etc/nginx/ssl/localhost/ssl-dhparams.pem; # managed by Certbot
+    
+    # Wordpress Rewrite
+    # location / {
+    #     try_files $uri $uri/ /index.php?$args;
+    # }
 
     location ~ [^/]\.php(/|$) {
+      try_files $uri =404;
       fastcgi_pass  php:9000;
       fastcgi_index index.php;
       fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
       include fastcgi.conf;
-      include fastcgi_params;
     }
 
     location ~ .*\.(gif|jpg|jpeg|png|bmp|swf|flv|mp4|ico)$ {
@@ -60,5 +66,4 @@ server {
     location ~ ^/(\.user.ini|\.ht|\.git|\.svn|\.project|LICENSE|README.md) {
       deny all;
     }
-
 }
