--- a/apps/nginx/nginx.conf
+++ b/apps/nginx/nginx.conf
@@ -5,7 +5,9 @@ pid        /var/run/nginx.pid;
 worker_rlimit_nofile 65535;
 
 events {
+    use epoll;
     worker_connections  65535;
+    multi_accept on;
 }
 
 http {
@@ -27,9 +29,27 @@ http {
     proxy_read_timeout 3600s;
     proxy_connect_timeout 3600s;
     client_max_body_size 2050m;
+    
+    fastcgi_connect_timeout 300;
+    fastcgi_send_timeout 300;
+    fastcgi_read_timeout 300;
+    fastcgi_buffer_size 64k;
+    fastcgi_buffers 4 64k;
+    fastcgi_busy_buffers_size 128k;
+    fastcgi_temp_file_write_size 256k; 
+
     gzip  on;
+    gzip_min_length  1k;
+    gzip_buffers     4 16k;
+    gzip_http_version 1.1;
+    gzip_comp_level 2;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-    ## Settings for a TLS enabled server
+    gzip_vary on;
+    gzip_proxied   expired no-cache no-store private auth;
+    gzip_disable   "MSIE [1-6]\.";
+    server_tokens off;
+
+    # Settings for a TLS enabled server
     #    server {
     #        listen       443 ssl http2 default_server;
     #        listen       [::]:443 ssl http2 default_server;
@@ -42,6 +62,7 @@ http {
     #        ssl_ciphers HIGH:!aNULL:!MD5;
     #        ssl_prefer_server_ciphers on;
     #
-    ##    }
+    #    }
+
     include /etc/nginx/conf.d/*.conf;
 }
