--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,8 @@
-version: "3"
 services:
 # --- deploy nginx ----
   nginx:
     container_name: nginx
-    image: nginx:1.25.3-alpine
+    image: nginx:1.27.1-alpine
     restart: always
     ports:
       - "8084:80"
@@ -14,7 +13,6 @@ services:
       - ./apps/nginx/conf.d:/etc/nginx/conf.d:rw
       - ./apps/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./apps/nginx/fastcgi.conf:/etc/nginx/fastcgi.conf:ro
-      - ./apps/nginx/fastcgi_params:/etc/nginx/fastcgi_params:ro
       - ./apps/nginx/logs:/var/log/nginx:rw
       - ./apps/nginx/ssl:/etc/nginx/ssl
       - ./web:/usr/share/nginx/html
@@ -23,19 +21,24 @@ services:
 # --- deploy php ----
   php:
     build:
-      context: ./apps/php
-      dockerfile: Dockerfile
+      context: .
       args:
-        PHP_VERSION: php:8.3.2-fpm-alpine
-        # MIRRORS_REPO_URL: mirrors.ustc.edu.cn
-        # Available PHP_EXTENSIONS
-        PHP_EXTENSIONS: amqp apcu ast bcmath bitset blackfire bz2 calendar csv dba decimal ds enchant ev event excimer exif ffi ftp gd geospatial gettext gmagick gmp gnupg http igbinary imap inotify intl ion json_post jsonpath ldap luasandbox lzf mailparse maxminddb mcrypt memcache memcached mongodb msgpack mysqli oauth oci8 odbc opcache openswoole opentelemetry pcntl pcov pdo_dblib pdo_mysql pdo_oci pdo_odbc pdo_pgsql pgsql php_trie pkcs11 pq protobuf pspell raphf rdkafka redis relay seasclick seaslog shmop smbclient snappy snmp snuffleupagus soap sockets solr spx ssh2 stomp sync sysvmsg sysvsem sysvshm tideways tidy timezonedb uopz uploadprogress uuid uv vld xdebug xhprof xlswriter xmldiff xmlrpc xsl yac yaml zephir_parser zip zmq zstd 
-        TZ: Asia/Shanghai
+        PHP_EXTENSIONS: amqp apcu ast bcmath bitset blackfire bz2 calendar csv dba ddtrace decimal ds enchant ev event excimer exif ffi ftp gd gearman geos geospatial gettext gmagick gmp gnupg grpc http igbinary imap inotify intl ion json_post jsonpath ldap luasandbox lzf mailparse maxminddb mcrypt memcache memcached mongodb msgpack mysqli newrelic oauth oci8 odbc opcache parle pcntl pcov pdo_dblib pdo_firebird pdo_mysql pdo_oci pdo_odbc pdo_pgsql pdo_sqlsrv pgsql php_trie phpy pkcs11 pq protobuf pspell raphf rdkafka redis relay seasclick seaslog shmop smbclient snappy snmp snuffleupagus soap sockets solr sourceguardian spx ssh2 stomp swoole sync sysvmsg sysvsem sysvshm tideways tidy timezonedb uploadprogress uuid uv vld xdebug xdiff xhprof xlswriter xmldiff xmlrpc xsl yac yaml yar zephir_parser zip zmq zstd
+      dockerfile_inline: |
+        FROM php:8.3.10-fpm-alpine
+        RUN curl -sSLf -o /usr/local/bin/install-php-extensions https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions \ 
+        && chmod +x /usr/local/bin/install-php-extensions \
+        && apk update \
+        && apk --no-cache add tzdata \
+        && cp "/usr/share/zoneinfo/Asia/Shanghai" /etc/localtime \
+        && echo "Asia/Shanghai" > /etc/timezone
+        ARG PHP_EXTENSIONS
+        RUN for i in $${PHP_EXTENSIONS}; do install-php-extensions $$i; done
       platforms:
         - "linux/amd64"
         - "linux/arm64"
     container_name: php
-    image: bdbin/php:8.3.2-fpm-alpine
+    image: bdbin/php:8.3.10-fpm-alpine
     restart: always
     ports:
       - 9000:9000
@@ -50,13 +53,13 @@ services:
   mysql:
     restart: always
     container_name: mysql
-    image: mysql:8.3.0
+    image: mysql:9.0.1
     ports:
       - '3307:3306'
     environment:
       - MYSQL_ROOT_PASSWORD=gYFMzPu85nWnYxebBGnxvf
+      - TZ=Asia/Shanghai
     volumes:
-      - /etc/localtime:/etc/localtime:ro
       - ./apps/mysql/conf/my.cnf:/etc/my.cnf:ro
       - ./apps/mysql/data:/var/lib/mysql
       - ./apps/mysql/logs:/var/log/mysql
