Optimize my.cnf configuration

--- a/apps/mysql/conf/my.cnf
+++ b/apps/mysql/conf/my.cnf
@@ -9,7 +9,7 @@ no-auto-rehash
 
 [mysqld]
 port = 3306
-default_authentication_plugin = mysql_native_password
+# default_authentication_plugin = mysql_native_password
 
 pid-file = /var/log/mysql/mysql.pid
 user = mysql
@@ -45,7 +45,7 @@ ft_min_word_len = 4
 
 log_bin = mysql-bin
 binlog_format = ROW
-expire_logs_days = 7
+# expire_logs_days = 7
 binlog_expire_logs_seconds = 604800
 
 log_error = /var/log/mysql/mysql-error.log
