--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,9 +25,12 @@ services:
     build:
       context: .
       args:
-        PHP_EXTENSIONS: amqp apcu ast bcmath bitset blackfire bz2 calendar csv dba ddtrace decimal ds enchant ev event excimer exif ffi ftp gd gearman geos geospatial gettext gmagick gmp gnupg grpc http igbinary imap inotify intl ion json_post jsonpath ldap luasandbox lzf mailparse maxminddb mcrypt memcache memcached mongodb msgpack mysqli newrelic oauth oci8 odbc opcache parle pcntl pcov pdo_dblib pdo_firebird pdo_mysql pdo_oci pdo_odbc pdo_pgsql pdo_sqlsrv pgsql php_trie phpy pkcs11 pq protobuf pspell raphf rdkafka redis relay seasclick seaslog shmop smbclient snappy snmp snuffleupagus soap sockets solr sourceguardian spx ssh2 stomp swoole sync sysvmsg sysvsem sysvshm tideways tidy timezonedb uploadprogress uuid uv vld xdebug xdiff xhprof xlswriter xmldiff xmlrpc xsl yac yaml yar zephir_parser zip zmq zstd
+        # for php 8.4.x
+        PHP_EXTENSIONS: amqp apcu ast bcmath bitset brotli bz2 calendar csv dba ddtrace decimal ds enchant ev event excimer exif ffi ftp gd geos geospatial gettext gmagick gmp gnupg grpc http igbinary imap inotify intl ion json_post jsonpath ldap luasandbox lzf mailparse maxminddb md4c memcache memcached memprof mongodb msgpack mysqli oauth oci8 odbc opcache opentelemetry parallel parle pcntl pcov pdo_dblib pdo_firebird pdo_mysql pdo_oci pdo_odbc pdo_pgsql pdo_sqlsrv pgsql php_trie phpy pkcs11 pq protobuf pspell psr raphf rdkafka redis relay saxon seasclick shmop simdjson smbclient snappy snmp snuffleupagus soap sockets spx sqlsrv ssh2 stomp swoole sync sysvmsg sysvsem sysvshm tideways tidy timezonedb uploadprogress uuid uv vips wikidiff2 xdebug xdiff xhprof xlswriter xmldiff xmlrpc xpass xsl yac yaml yar zephir_parser zip zmq zstd
+        # for php 8.3.x
+        # PHP_EXTENSIONS: amqp apcu ast bcmath bitset blackfire bz2 calendar csv dba ddtrace decimal ds enchant ev event excimer exif ffi ftp gd gearman geos geospatial gettext gmagick gmp gnupg grpc http igbinary imap inotify intl ion json_post jsonpath ldap luasandbox lzf mailparse maxminddb mcrypt memcache memcached mongodb msgpack mysqli newrelic oauth oci8 odbc opcache parle pcntl pcov pdo_dblib pdo_firebird pdo_mysql pdo_oci pdo_odbc pdo_pgsql pdo_sqlsrv pgsql php_trie phpy pkcs11 pq protobuf pspell raphf rdkafka redis relay seasclick seaslog shmop smbclient snappy snmp snuffleupagus soap sockets solr sourceguardian spx ssh2 stomp swoole sync sysvmsg sysvsem sysvshm tideways tidy timezonedb uploadprogress uuid uv vld xdebug xdiff xhprof xlswriter xmldiff xmlrpc xsl yac yaml yar zephir_parser zip zmq zstd
       dockerfile_inline: |
-        FROM php:8.4.1-fpm-alpine
+        FROM php:8.4.2-fpm-alpine
         RUN curl -sSLf -o /usr/local/bin/install-php-extensions https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions \ 
         && chmod +x /usr/local/bin/install-php-extensions \
         && apk update \
@@ -35,11 +38,11 @@ services:
         && cp "/usr/share/zoneinfo/Asia/Shanghai" /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone
         ARG PHP_EXTENSIONS
-        RUN for i in $${PHP_EXTENSIONS}; do install-php-extensions $$i; done
+        RUN for i in $${PHP_EXTENSIONS}; do echo "LDNMP install $$i"; install-php-extensions $$i; done
       platforms:
         - "linux/amd64"
         - "linux/arm64"
-    image: bdbin/php:8.4.1-fpm-alpine
+    image: bdbin/php:8.4.2-fpm-alpine
     container_name: php
     restart: always
     ports:
