--- a/apps/php/etc/php-fpm.conf
+++ b/apps/php/etc/php-fpm.conf
@@ -46,7 +46,7 @@ rlimit_files = 51200
 rlimit_core = 0
 
 catch_workers_output = yes
-;env[HOSTNAME] = test-simbastack550-6
+;env[HOSTNAME] = bdbin-ldnmp-1
 ;env[PATH] = /usr/local/bin:/usr/bin:/bin
 ;env[TMP] = /tmp
 ;env[TMPDIR] = /tmp
