--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -45,7 +45,7 @@ services:
         && cp "/usr/share/zoneinfo/Asia/Shanghai" /etc/localtime \
         && echo "Asia/Shanghai" > /etc/timezone
         ARG PHP_EXTENSIONS
-        RUN for i in $${PHP_EXTENSIONS}; do echo "https://github.com/bdbin/ldnmp install $$i"; install-php-extensions $$i; done
+        RUN for i in $${PHP_EXTENSIONS}; do echo "https://github.com/bdbin/ldnmp install $$i"; IPE_PROCESSOR_COUNT=2 install-php-extensions $$i; done
       platforms:
         - "linux/amd64"
         - "linux/arm64"
